data/derived/sp14/progs/unify/prog2058.ml.out
Characters 386-389:
  | Magic e1 -> (sin*pi(cos(pi*.(eval(e1, x, y)))))
                 ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
